--- a/build.gradle
+++ b/build.gradle
@@ -2,29 +2,31 @@
 buildscript {
     ext {
         // internal
-        compileSdkVersion = 34
+        compileSdkVersion = 35
         buildToolsVersion = "34.0.0"
         minSdkVersion = 21
-        targetSdkVersion = 34
-        gradleVersion = '7.4.2'
-        appcompatVersion = '1.6.1'
-        materialVersion = '1.6.1'
-        constraintLayoutVersion = '2.1.4'
-        kotlinVersion = '1.8.21'
-        navigationVersion = '2.6.0'
-        roomVersion = '2.5.2'
-        hiltVersion = '2.45'
-        smsVerificationVersion = '18.2.0'
-        servicesAuthApiPhoneVersion = '18.0.1'
-        workVersion = '2.8.1'
+        targetSdkVersion = 35
+        gradleVersion = '8.6.0'
+        activityVersion = '1.10.1'
+        appcompatVersion = '1.7.1'
+        materialVersion = '1.12.0'
+        constraintLayoutVersion = '2.2.1'
+        kotlinVersion = '2.1.0'
+        navigationVersion = '2.9.1'
+        roomVersion = '2.7.2'
+        hiltVersion = '2.56.2'
+        smsVerificationVersion = '18.7.2'
+        servicesAuthApiPhoneVersion = '18.2.0'
+        workVersion = '2.10.2'
         // external
-        intuitVersion = '1.0.6'
-        gsonVersion = '2.10'
-        retrofitVersion = '2.9.0'
+        intuitVersion = '1.1.1'
+        gsonVersion = '2.11.0'
+        retrofitVersion = '2.11.0'
         okhttpVersion = '5.0.0-alpha.3'
-        glideVersion = '4.13.0'
+        glideVersion = '4.16.0'
         chromeTabsVersion = '23.3.0'
-        playServicesLocationVersion = '21.0.1'
+        playServicesLocationVersion = '21.3.0'
+        lottieVersion = '6.5.2'
     }
     repositories {
         google()
@@ -55,5 +57,5 @@ allprojects {
 }
 
 tasks.register('clean', Delete) {
-    delete rootProject.buildDir
+    delete(layout.buildDirectory)
 }
